Upgrade and improve movies-api and movies-shell
Upgrades:
- Bump spring-boot-starter-parent from 4.0.1 to 4.0.3 in both modules
- Bump springdoc-openapi from 3.0.1 to 3.0.2 in movies-api
- Bump spring-shell from 4.0.0 to 4.0.1 in movies-shell

movies-api improvements:
- Change Movie.year type from String to Integer, mapped to movie_year column
- Remove NON_KEYWORDS=YEAR workaround from datasource URL
- Replace Collectors.toList() with Stream.toList() in MoviesController
- Remove redundant @Repository from MovieRepository
- Move @Value to @Bean method parameter in SwaggerConfig

movies-shell improvements:
- Fix command names: add-movies -> add-movie, delete-movies -> delete-movie
- Move @Value to @Bean method parameter in MoviesApiClientConfig

Miscellaneous:
- Use smaller PNG images
- Update README